mempebaiki kesalahan text yang overflow

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <img src="./img/Right Circle.png" alt="Ornament" style="position: absolute; top: 1500px; right: 0" height="480px" class="d-none d-lg-block" />
 
     <!-- Outputs from our platform -->
-    <section style="background-color: #000909" class="pt-5">
+    <section style="background-color: #000909" class="pt-5 position-relative">
       <div class="container py-5 position-relative" style="z-index: 100">
         <div class="row align-items-center pt-5 pb-3">
           <div class="col-10">
@@ -159,7 +159,7 @@
     <!-- End Trusted Company -->
 
     <!-- Testimonials -->
-    <section style="background-color: #000909" class="py-5">
+    <section style="background-color: #000909" class="py-5 position-relative">
       <div class="container py-5">
         <div class="row align-items-center justify-content-center">
           <div class="col-6 col-md-4">
@@ -214,7 +214,7 @@
     <!-- End Newsletter -->
 
     <!-- Footer -->
-    <footer style="background-color: #000909" class="pt-5 pb-3 footer-gradient">
+    <footer style="background-color: #000909" class="pt-5 pb-3 footer-gradient position-relative">
       <div class="container pt-5 pb-1">
         <div class="row mb-5">
           <div class="d-none d-md-block col-6 col-lg-3">
