memperbaiki text yang overflow di screen hp

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <!-- Content Landing -->
       <div class="container">
-        <div class="row position-absolute" style="z-index: 100">
+        <div class="row text-index">
           <div class="col col-lg-7 vh-100 d-flex flex-column justify-content-center pe-0 pe-md-5 text-center text-lg-start">
             <h1 class="display-3 text-white" style="font-weight: 600">One platform to boost your business</h1>
             <p class="fs-4 mt-3 mb-5 paragraph" style="color: #90bcb7">Learn how to manage your business effieciently with a platform trusted by global leaders.</p>
@@ -49,7 +49,7 @@
 
     <!-- How can we help your business -->
     <section style="background-color: #000909" class="pt-5">
-      <div class="container py-5 position-relative" style="z-index: 100">
+      <div class="container py-5 text-index">
         <div class="row py-5 text-center">
           <div class="col">
             <h2 class="display-6 text-light" style="font-weight: 600">How we can help your business</h2>
@@ -85,13 +85,13 @@
     <img src="./img/Right Circle.png" alt="Ornament" style="position: absolute; top: 1500px; right: 0" height="480px" class="d-none d-lg-block" />
 
     <!-- Outputs from our platform -->
-    <section style="background-color: #000909" class="pt-5 position-relative">
-      <div class="container py-5 position-relative" style="z-index: 100">
+    <section style="background-color: #000909" class="pt-5">
+      <div class="container py-5 text-index">
         <div class="row align-items-center pt-5 pb-3">
-          <div class="col-10">
+          <div class="col-8 col-lg-10">
             <h2 class="text-light display-6" style="font-weight: 600">Outputs from our platform</h2>
           </div>
-          <div class="col-2 px-4 text-end">
+          <div class="col-4 col-lg-2 px-4 text-end">
             <a href="#" class="text-decoration-none text-light fs-5">See more</a>
           </div>
         </div>
@@ -128,29 +128,29 @@
 
     <!-- Trusted Company -->
     <section style="background-color: #000909" class="pt-5">
-      <div class="container position-relative py-5" style="z-index: 100">
+      <div class="container py-5 text-index">
         <div class="row text-center pt-5">
           <div class="col">
             <h2 class="text-light display-5" style="font-weight: 600">Trusted by over 400 global leading companies</h2>
           </div>
         </div>
         <div class="row gx-1 justify-content-center mt-5 mt-md-3">
-          <div class="col-3 col-md-2 col-lg-1">
+          <div class="col-6 col-sm-3 col-md-2 col-lg-1">
             <img src="./img/brand-1.png" alt="brand 1" class="img-fluid" />
           </div>
-          <div class="col-3 col-md-2 col-lg-1 ms-5">
+          <div class="col-6 col-sm-3 col-md-2 col-lg-1 ms-5">
             <img src="./img/brand-2.png" alt="brand 2" class="img-fluid" />
           </div>
-          <div class="col-3 col-md-2 col-lg-1 ms-5">
+          <div class="col-6 col-sm-3 col-md-2 col-lg-1 ms-5">
             <img src="./img/brand-3.png" alt="brand 3" class="img-fluid" />
           </div>
-          <div class="col-3 col-md-2 col-lg-1 ms-5">
+          <div class="col-6 col-sm-3 col-md-2 col-lg-1 ms-5">
             <img src="./img/brand-4.png" alt="brand 4" class="img-fluid" />
           </div>
-          <div class="col-3 col-md-2 col-lg-1 ms-5">
+          <div class="col-6 col-sm-3 col-md-2 col-lg-1 ms-5">
             <img src="./img/brand-5.png" alt="brand 5" class="img-fluid" />
           </div>
-          <div class="col-3 col-md-2 col-lg-1 ms-5">
+          <div class="col-6 col-sm-3 col-md-2 col-lg-1 ms-5">
             <img src="./img/brand-6.png" alt="brand 6" class="img-fluid" />
           </div>
         </div>
@@ -159,19 +159,19 @@
     <!-- End Trusted Company -->
 
     <!-- Testimonials -->
-    <section style="background-color: #000909" class="py-5 position-relative">
+    <section style="background-color: #000909" class="py-5">
       <div class="container py-5">
         <div class="row align-items-center justify-content-center">
           <div class="col-6 col-md-4">
             <img src="./img/Reviewer.png" alt="Reviewer image" class="img-fluid reviewer" />
           </div>
-          <div class="col-12 col-md-5 px-0 ms-5 position-relative">
+          <div class="col-10 col-md-5 px-0 ms-5">
             <img src="./img/quote-sign.png" alt="quote sign" class="position-absolute d-none d-md-block" width="100" style="right: 20px; top: -50px" />
-            <div class="position-relative mt-3 mt-md-0" style="z-index: 100">
-              <p class="fs-5 lh-base text-light mb-3 mb-md-5 text-center text-md-start">
+            <div class="mt-3 mt-md-0 text-start text-sm-center text-md-start text-index">
+              <p class="fs-5 lh-base text-light mb-3 mb-md-5">
                 Since I used Work.ly, now I can have a decent workflow. There are also some improvements that are felt by my fellow workers. I am very happy using this platform and I recommend Work.ly to all of you guys!
               </p>
-              <div class="text-center text-md-start">
+              <div class="text-start text-sm-center text-md-start">
                 <p class="fs-4 text-light mb-1" style="font-weight: 600">Jhon Doe</p>
                 <p style="color: #666666">Sharp Indonesia</p>
               </div>
@@ -214,7 +214,7 @@
     <!-- End Newsletter -->
 
     <!-- Footer -->
-    <footer style="background-color: #000909" class="pt-5 pb-3 footer-gradient position-relative">
+    <footer style="background-color: #000909" class="pt-5 pb-3 footer-gradient">
       <div class="container pt-5 pb-1">
         <div class="row mb-5">
           <div class="d-none d-md-block col-6 col-lg-3">
